--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             markets to contribute to investment decision-making.
         </div>
         <div class="image-box">
-            <img src="RBS.JPG" alt="Rutgers Business School" class="profile-pic">
+            <img src="RBS-Basic.JPG" alt="Rutgers Business School" class="profile-pic">
             <br>
             <br>
             <!-- Market Ticker Box -->
